Fix article jump nav overlaying article content

--- a/css/style.css
+++ b/css/style.css
@@ -665,6 +665,14 @@ article ul {
 
 /* Table of contents for articles page */
 .article-nav {
+    display: block;
+    flex-wrap: nowrap;
+    justify-content: initial;
+    background: transparent;
+    color: inherit;
+    padding: 0;
+    box-shadow: none;
+    top: auto;
     position: fixed;
     right: 1rem;
     bottom: 1rem;
@@ -678,6 +686,7 @@ article ul {
     list-style: none;
     margin: 0;
     padding: 0;
+    display: block;
 }
 
 .article-nav__toggle {
